--- a/app/client/containers/AppLayout.css
+++ b/app/client/containers/AppLayout.css
@@ -47,3 +47,8 @@
 .helpLink:hover {
   color: white
 }
+
+.modalOpened {
+  height: 100%;
+  overflow-x: hidden;
+}
